--- a/app/windows/CMakeLists.txt
+++ b/app/windows/CMakeLists.txt
@@ -4,7 +4,7 @@ project(era_connect LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "Era Connect")
+set(BINARY_NAME "era_connect")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
