--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
           cd app
           flutter pub get
           flutter build windows --release
+
+          copy C:\Windows\System32\msvcp140.dll build/windows/runner/Release
+          copy C:\Windows\System32\vcruntime140.dll build/windows/runner/Release
+          copy C:\Windows\System32\vcruntime140_1.dll build/windows/runner/Release
       - name: Upload Windows
         uses: actions/upload-artifact@v3
         with:
@@ -73,7 +77,7 @@ jobs:
           flutter build macos --release
 
           # Create a DMG installer.
-          cp assets/images/era_connect_app_icon.icns build/macos/Build/Products
+          cp assets/era_connect_app_icon.icns build/macos/Build/Products
           cd build/macos/Build/Products
           brew install create-dmg
           create-dmg \
