--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,9 +31,6 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   ffi: ^2.0.2
   flutter_rust_bridge: ^1.78.0
   meta: ^1.8.0
@@ -54,6 +51,7 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/era_connect_logo.svg
 
   fonts:
     - family: GenSenRounded
