--- a/packages/era_connect_ui/pubspec.yaml
+++ b/packages/era_connect_ui/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.0.5
   flutter_svg: ^2.0.7
   window_manager: ^0.3.4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
