--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -63,3 +63,6 @@ flutter:
           weight: 700
         - asset: assets/fonts/GenSenRounded-M.ttc
           weight: 500
+    - family: Geo
+      fonts:
+       - asset: assets/fonts/Geo-Regular.ttf
