--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -9,5 +9,21 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-anyhow = "1"
+anyhow = "1.0.71"
+async-semaphore = "1.2.0"
+chrono = "0.4.26"
+error-chain = "0.12.4"
+futures = "0.3.28"
+hex = "0.4.3"
+indicatif = "0.17.5"
+os-version = "0.2.0"
+os_info = "3.7.0"
+os_type = "2.6.0"
+reqwest = { version = "0.11.18", features = ["blocking", "json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json =  { version ="1.0.99"}
+sha1 = "0.10.5"
+tempfile = "3.6.0"
+tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "fs"] }
+tokio-scoped = "0.2.0"
 flutter_rust_bridge = "1"
