--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
           toolchain: stable
           override: true
           components: rustfmt, clippy
-          target: x86_64-apple-darwin, aarch64-apple-darwin
+          target: aarch64-apple-darwin
       - name: Build macOS
         run: |
           cd app
