--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 anyhow = "1.0.71"
 async-semaphore = "1.2.0"
+bytes = "1.4.0"
 chrono = "0.4.26"
 error-chain = "0.12.4"
 flutter_rust_bridge = "1.78.0"
@@ -27,3 +28,4 @@ sha1 = "0.10.5"
 tempfile = "3.6.0"
 tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "fs"] }
 tokio-scoped = "0.2.0"
+zip = "0.6.6"
