--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = "1.0.71"
 async-semaphore = "1.2.0"
 bytes = "1.4.0"
 chrono = "0.4.26"
+dirs = "5.0.1"
 error-chain = "0.12.4"
 flutter_rust_bridge = "1.78.0"
 futures = "0.3.28"
