--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -14,9 +14,11 @@ async-semaphore = "1.2.0"
 bytes = "1.4.0"
 chrono = "0.4.26"
 dirs = "5.0.1"
+duct = "0.13.6"
 error-chain = "0.12.4"
 flutter_rust_bridge = "1.78.0"
 futures = "0.3.28"
+glob = "0.3.1"
 hex = "0.4.3"
 indicatif = "0.17.5"
 os-version = "0.2.0"
@@ -27,6 +29,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json =  { version ="1.0.99"}
 sha1 = "0.10.5"
 tempfile = "3.6.0"
-tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "fs"] }
+tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
 tokio-scoped = "0.2.0"
 zip = "0.6.6"
