--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -16,7 +16,7 @@ chrono = "0.4.26"
 dirs = "5.0.1"
 duct = "0.13.6"
 error-chain = "0.12.4"
-flutter_rust_bridge = "1.78.0"
+flutter_rust_bridge = { version = "1.78.0", features = ["zero-copy"] }
 futures = "0.3.28"
 glob = "0.3.1"
 hex = "0.4.3"
