--- a/packages/era_connect_ui/pubspec.yaml
+++ b/packages/era_connect_ui/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.7
   window_manager: ^0.3.5
   equatable: ^2.0.5
+  just_the_tooltip: ^0.0.12
 
 dev_dependencies:
   flutter_test:
