--- a/packages/era_connect_ui/pubspec.yaml
+++ b/packages/era_connect_ui/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  uses-material-design: true
   assets:
     - icons/
 # To add assets to your package, add an assets section, like this:
