--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
 
           cd app
           flutter pub get
-          dart pub global run full_coverage
+          dart pub global run full_coverage --ignore bridge_generated.dart,bridge_generated.io.dart,ffi.dart
           flutter test --coverage
           sed "s/^SF:.*lib/SF:app\/lib/g" coverage/lcov.info >> ../coverage/lcov.info
 
