--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib", "staticlib"]
 anyhow = { version = "1.0.72", features = ["backtrace"] }
 bytes = "1.4.0"
 color-eyre = "0.6.2"
+crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 dirs = "5.0.1"
 error-chain = "0.12.4"
 flutter_rust_bridge = { version = "1.78.0", features = ["zero-copy"] }
