--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -19,6 +19,7 @@ flutter_rust_bridge = { version = "1.78.0", features = ["zero-copy"] }
 futures = "0.3.28"
 glob = "0.3.1"
 hex = "0.4.3"
+lazy_static = "1.4.0"
 os-version = "0.2.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
