--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -9,5 +9,22 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-anyhow = "1"
-flutter_rust_bridge = "1"
+anyhow = { version = "1.0.72", features = ["backtrace"] }
+bytes = "1.4.0"
+color-eyre = "0.6.2"
+crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
+dirs = "5.0.1"
+error-chain = "0.12.4"
+flutter_rust_bridge = { version = "1.78.0", features = ["zero-copy"] }
+futures = "0.3.28"
+glob = "0.3.1"
+hex = "0.4.3"
+lazy_static = "1.4.0"
+os-version = "0.2.0"
+reqwest = { version = "0.11.18", features = ["blocking", "json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json =  { version ="1.0.99"}
+sha1 = "0.10.5"
+tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
+tokio-stream = "0.1.14"
+zip = "0.6.6"
