feat: step dialog

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -67,3 +67,6 @@ flutter:
     - family: Geo
       fonts:
         - asset: assets/fonts/Geo-Regular.ttf
+    - family: Graduate
+      fonts:
+        - asset: assets/fonts/Graduate-Regular.ttf
