--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -15,7 +15,7 @@ color-eyre = "0.6.2"
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 dirs = "5.0.1"
 error-chain = "0.12.4"
-flutter_rust_bridge = { version = "=1.80.1", features = ["zero-copy"] }
+flutter_rust_bridge = { version = "1.80.1", features = ["zero-copy"] }
 futures = "0.3.28"
 glob = "0.3.1"
 hex = "0.4.3"
@@ -36,3 +36,4 @@ zip = "0.6.6"
 log = "0.4"
 chrono = "0.4.26"
 convert_case = "0.6.0"
+fern = "0.6.2"
