--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -15,7 +15,10 @@ color-eyre = "0.6.2"
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 dirs = "5.0.1"
 error-chain = "0.12.4"
-flutter_rust_bridge = { git = "https://github.com/fzyzcjy/flutter_rust_bridge" , features = ["zero-copy"] }
+flutter_rust_bridge = { git = "https://github.com/fzyzcjy/flutter_rust_bridge", features = [
+    "zero-copy",
+    "uuid",
+] }
 futures = "0.3.28"
 glob = "0.3.1"
 hex = "0.4.3"
@@ -37,3 +40,5 @@ zip = "0.6.6"
 log = "0.4"
 chrono = "0.4.26"
 fern = "0.6.2"
+oauth2 = "4.4.1"
+uuid = { version = "1.4.1", features = ["serde", "v4"] }
