--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
     path: ../packages/era_connect_ui
   era_connect_i18n:
     path: ../packages/era_connect_i18n
+  url_launcher: ^6.1.12
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
