--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
   ffi: ^2.0.2
   flutter_rust_bridge: ^1.79.0
-  meta: ^1.8.0
+  meta: ^1.9.1
   flutter_svg: ^2.0.7
   window_manager: ^0.3.5
   provider: ^6.0.5
@@ -52,6 +52,7 @@ dev_dependencies:
   ffigen: ^8.0.2
   build_runner: ^2.4.6
   freezed: ^2.4.1
+  mockito: ^5.4.2
 
 flutter:
   uses-material-design: true
