--- a/packages/era_connect_ui/pubspec.yaml
+++ b/packages/era_connect_ui/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   window_manager: ^0.3.5
   equatable: ^2.0.5
   just_the_tooltip: ^0.0.12
+  flutter_markdown: ^0.6.17+1
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
