--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "rust-analyzer.linkedProjects": [
         "app/native/Cargo.toml",
+        "app/native/crates/struct-key-value-pair/Cargo.toml",
     ]
 }
