--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -16,10 +16,7 @@ color-eyre = "0.6.2"
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 dirs = "5.0.1"
 error-chain = "0.12.4"
-flutter_rust_bridge = { version = "1.81.0", features = [
-    "zero-copy",
-    "uuid",
-] }
+flutter_rust_bridge = { version = "1.81.0", features = ["zero-copy", "uuid"] }
 futures = "0.3.28"
 glob = "0.3.1"
 hex = "0.4.3"
@@ -39,8 +36,9 @@ tokio = { version = "1.31.0", features = [
 tokio-stream = "0.1.14"
 zip = "0.6.6"
 log = "0.4"
-chrono = "0.4.26"
+chrono = { version = "0.4.26", features = ["serde"] }
 fern = "0.6.2"
 oauth2 = "4.4.1"
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 image = "0.24.7"
+serde_with = { version = "3.3.0", features = ["chrono"] }
