--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -42,3 +42,4 @@ oauth2 = "4.4.1"
 uuid = { version = "1.4.1", features = ["serde", "v4"] }
 image = "0.24.7"
 serde_with = { version = "3.3.0", features = ["chrono"] }
+rand = "0.8.5"
