--- a/packages/era_connect_ui/pubspec.yaml
+++ b/packages/era_connect_ui/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   just_the_tooltip: ^0.0.12
   flutter_markdown: ^0.6.17+1
   url_launcher: ^6.1.12
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
