--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     path: ../packages/era_connect_i18n
   url_launcher: ^6.1.12
   uuid: ^3.0.7
+  blur: ^3.1.0
 
 dev_dependencies:
   flutter_test:
