--- a/app/native/Cargo.toml
+++ b/app/native/Cargo.toml
@@ -43,3 +43,4 @@ uuid = { version = "1.4.1", features = ["serde", "v4"] }
 image = "0.24.7"
 serde_with = { version = "3.3.0", features = ["chrono"] }
 rand = "0.8.5"
+regex = "1.9.5"
