--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -10,7 +10,6 @@ crate-type = ["cdylib", "staticlib"]
 struct-key-value-pair = { path = "crates/struct-key-value-pair" }
 anyhow = { version = "1.0.74", features = ["backtrace"] }
 bytes = "1.4.0"
-color-eyre = "0.6.2"
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 dirs = "5.0.1"
 error-chain = "0.12.4"
@@ -50,3 +49,4 @@ ferinth = "2.9.2"
 semver = "1.0.20"
 once_cell = "1.19.0"
 chashmap = "2.2.2"
+furse = "1.5.12"
