--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -52,7 +52,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.0
-  ffigen: 8.0.2
+  ffigen: ^9.0.0
   build_runner: ^2.4.6
   freezed: ^2.4.1
   mockito: ^5.4.2
