--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
 
   ffi: ^2.0.2
-  flutter_rust_bridge: ^2.0.0-dev.7
+  flutter_rust_bridge: ^2.0.0-dev.25
   meta: ^1.10.0
   flutter_svg: ^2.0.7
   window_manager: ^0.3.5
@@ -52,7 +52,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.0
-  ffigen: 8.0.2
+  ffigen: ^9.0.0
   build_runner: ^2.4.6
   freezed: ^2.4.1
   mockito: ^5.4.2
