--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -44,3 +44,6 @@ regex = "1.9.5"
 dashmap = "5.5.3"
 once_cell = "1.19.0"
 chashmap = "2.2.2"
+smart-default = "0.7.1"
+flate2 = "1.0.28"
+tar = "0.4.40"
